--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,8 @@
 <body>
   <app-root></app-root>
 </body>
+<!-- -->
+<script src="runtime.js"></script>
+<script src="polyfill.js"></script>
+<script src="main.js"></script>
 </html>
